[gd_scene load_steps=6 format=3 uid="uid://d00nlbpvqrp4r"]

[ext_resource type="Script" path="res://Faction_Regiment.gd" id="1_dxhcw"]
[ext_resource type="Texture2D" uid="uid://cftc6r08dnci6" path="res://grfx/iconDarkGrey32.png" id="2_3tm8i"]
[ext_resource type="Script" path="res://faction_icon.gd" id="3_vmfe0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ea2hr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_apcn5"]

[node name="Faction_Regiment" type="Node2D"]
script = ExtResource("1_dxhcw")

[node name="hitbox_regiment_bounds" type="Area2D" parent="."]

[node name="regiment_bounds" type="CollisionShape2D" parent="hitbox_regiment_bounds"]
shape = SubResource("RectangleShape2D_ea2hr")

[node name="hitbox_rotation" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox_rotation"]
shape = SubResource("CircleShape2D_apcn5")

[node name="visuall_rect" type="Sprite2D" parent="."]
texture = ExtResource("2_3tm8i")
script = ExtResource("3_vmfe0")

[node name="line_draw" type="Node2D" parent="."]
z_index = -1
script = ExtResource("5_pensw")

[connection signal="input_event" from="hitbox_rotation" to="." method="_on_hitbox_rotation_input_event"]
[connection signal="input_event" from="hitbox_regiment_bounds" to="." method="_on_hitbox_regiment_bounds_input_event"]
[connection signal="input_event" from="hitbox_rotation" to="." method="_on_hitbox_rotation_input_event"]
