[gd_scene load_steps=7 format=3 uid="uid://bwv3s62w20ivm"]

[ext_resource type="Script" path="res://scripts/game/Faction_Regiment.gd" id="1_nqapm"]
[ext_resource type="PackedScene" uid="uid://sf58apyyihsn" path="res://scns/game/hitbox_regiment_bounds.tscn" id="2_daj36"]
[ext_resource type="Script" path="res://scripts/game/faction_icon.gd" id="2_nebew"]
[ext_resource type="PackedScene" uid="uid://3mie7hp7sxd" path="res://scns/game/hitbox_rotation.tscn" id="3_3dvq2"]
[ext_resource type="Texture2D" uid="uid://ep4d0xyynwdk" path="res://grfx/iconWhite_full.png" id="4_2trtb"]
[ext_resource type="PackedScene" uid="uid://cgrwbimmaa7cd" path="res://scns/game/hitbox_arcs.tscn" id="6_eui2j"]

[node name="Faction_Regiment_Scene" type="Node2D"]
script = ExtResource("1_nqapm")
setup_facing_dir = null
setup_pos = null

[node name="hitbox_regiment_bounds" parent="." instance=ExtResource("2_daj36")]

[node name="hitbox_rotation" parent="." instance=ExtResource("3_3dvq2")]
collision_layer = 128
collision_mask = 0

[node name="bounds_sprite" type="Sprite2D" parent="."]
texture = ExtResource("4_2trtb")
script = ExtResource("2_nebew")

[node name="hitbox_arcs" parent="." instance=ExtResource("6_eui2j")]
collision_layer = 4

[connection signal="update_visuals" from="." to="hitbox_regiment_bounds" method="_on_faction_regiment_scene_update_visuals"]
[connection signal="update_visuals" from="." to="hitbox_rotation" method="_on_faction_regiment_scene_update_visuals"]
[connection signal="update_visuals" from="." to="bounds_sprite" method="_on_faction_regiment_scene_update_visuals"]
[connection signal="update_visuals" from="." to="hitbox_arcs" method="_on_faction_regiment_scene_update_visuals"]
[connection signal="input_event" from="hitbox_regiment_bounds" to="." method="_on_hitbox_regiment_bounds_input_event"]
[connection signal="selection_changed" from="hitbox_regiment_bounds" to="." method="_on_hitbox_regiment_bounds_selection_changed"]
[connection signal="selection_changed" from="hitbox_rotation" to="." method="_on_hitbox_rotation_selection_changed"]
